src/style.css
body {
  /*zoom: 200%;  Set the zoom level to 300% */
  background-image: url("./images/background.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position-y: -10vh;
  overflow-y: hidden;
  /* height: 100vh; */
}
body::-webkit-scrollbar {
  display: none;
}
#desktop {
  display: flex;
  position: absolute;
  top: 0;
  left: 0;
  flex-direction: column;
  width: 100vw;
  height: 100vh;
  padding: 0.5%;
  gap: 12px;
  z-index: 0;
}
.desktop-icon {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100px;
  height: 100px;
  gap: 10px;
  user-select: none;
  position: static;
}
.desktop-icon:hover {
  background-color: rgba(102, 180, 211, 0.3);
  /* border-radius: 5px; */
  cursor: pointer;
}
.selected {
  background-color: rgba(102, 180, 211, 0.3);
  /* border-radius: 5px; */
  cursor: pointer;
  border: 1px dotted black;
}
.desktop-icon img {
  justify-self: center;
  height: 45px;
  width: 45px;
}
.desktop-icon p {
  font-weight: 100;
  color: black;
  text-shadow: 1px 1px white;
  font-size: 16px;
  margin: 0;
}

#main-window {
  position: relative;
  z-index: 5000;
}
#transcription-final,
#chatbox {
  font-size: 11px;
  color: #5e5e5e;
  text-align: left;
}
#transcription-final p {
  margin: 1px;
}
#transcription-final {
  color: #000;
  height: calc(100vh / 2 - 146px);
  overflow-y: scroll;
}
#chatbox {
  display: flex;
  flex-direction: row;
}
#chatbox-text {
  width: 100%;
  min-height: 24px;
}
#recording-button {
  min-width: fit-content;
}

/* Overlay to gray out everything */
#browser-error-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background: rgba(100, 100, 100, 0.6);
  z-index: 9998;
}
#browser-error {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 9999;
}
.error-window-body {
  display: flex;
  gap: 10px;
  margin-left: 10px;
  margin-right: 10px;
  text-align: center;
  font-size: 13px;
}
.error-window-body img {
  align-self: center;
  width: 32px;
  height: 32px;
}

.bad-word {
  color: darkred;
  font-weight: bold;
}

